--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.19.0",
 		"config": "^3.2.2",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"express-fileupload": "^1.1.5",
 		"express-validator": "^6.1.1",
+		"formidable": "^1.2.1",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.24.0",
 		"mysql": "^2.17.1",
+		"read-excel-file": "^4.0.4",
 		"uuid": "^3.3.2"
 	},
 	"devDependencies": {
