--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@hapi/joi": "^16.1.8",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"config": "^3.2.2",
@@ -22,6 +23,7 @@
 		"formidable": "^1.2.1",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.24.0",
+		"multer": "^1.4.2",
 		"mysql": "^2.17.1",
 		"read-excel-file": "^4.0.4",
 		"uuid": "^3.3.2"
