--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"moment": "^2.24.0",
 		"multer": "^1.4.2",
 		"mysql": "^2.17.1",
+		"pdf-to-base64": "^1.0.2",
 		"read-excel-file": "^4.0.4",
 		"uuid": "^3.3.2"
 	},
