--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"express-fileupload": "^1.2.1",
-		"express-validator": "^6.1.1",
+		"express-validator": "^6.14.0",
 		"formidable": "^1.2.1",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.24.0",
 		"multer": "^1.4.2",
 		"mysql": "^2.17.1",
+		"node-cron": "^3.0.0",
+		"nodemailer": "^6.7.2",
 		"pdf-to-base64": "^1.0.2",
 		"read-excel-file": "^4.0.4",
 		"uuid": "^3.3.2"
