--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@hapi/joi": "^16.1.8",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
+		"compress-images": "^2.0.5",
 		"config": "^3.2.2",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
@@ -22,7 +23,7 @@
 		"express-validator": "^6.14.0",
 		"formidable": "^1.2.1",
 		"jsonwebtoken": "^8.5.1",
-		"moment": "^2.24.0",
+		"moment": "^2.29.3",
 		"multer": "^1.4.2",
 		"mysql": "^2.17.1",
 		"node-cron": "^3.0.0",
