--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"body-parser": "^1.19.0",
 		"config": "^3.2.2",
 		"cors": "^2.8.5",
+		"dotenv": "^16.0.0",
 		"express": "^4.17.1",
 		"express-fileupload": "^1.2.1",
 		"express-validator": "^6.14.0",
@@ -27,6 +28,7 @@
 		"mysql": "^2.17.1",
 		"node-cron": "^3.0.0",
 		"nodemailer": "^6.7.2",
+		"pdf-creator-node": "^2.3.4",
 		"pdf-to-base64": "^1.0.2",
 		"read-excel-file": "^4.0.4",
 		"uuid": "^3.3.2"
