--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.17.1",
 		"express-fileupload": "^1.2.1",
+		"express-handlebars": "^6.0.6",
 		"express-validator": "^6.14.0",
 		"formidable": "^1.2.1",
 		"jsonwebtoken": "^8.5.1",
@@ -30,6 +31,7 @@
 		"nodemailer": "^6.7.2",
 		"pdf-creator-node": "^2.3.4",
 		"pdf-to-base64": "^1.0.2",
+		"puppeteer": "^14.1.1",
 		"read-excel-file": "^4.0.4",
 		"uuid": "^3.3.2"
 	},
