--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-node_modules
+node_modules/
 public/survey/*
 public/ideabox/*
 public/payslip/*
 public/photos/*
 public/uploads/*
+public/report/*
+logs/*
