--- a/package.json
+++ b/package.json
@@ -13,23 +13,32 @@
 	"license": "ISC",
 	"dependencies": {
 		"@hapi/joi": "^16.1.8",
+		"app-root-path": "^3.0.0",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"config": "^3.2.2",
 		"cors": "^2.8.5",
+		"dotenv": "^16.0.0",
 		"express": "^4.17.1",
 		"express-fileupload": "^1.2.1",
+		"express-handlebars": "^6.0.6",
 		"express-validator": "^6.14.0",
 		"formidable": "^1.2.1",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.24.0",
 		"multer": "^1.4.2",
 		"mysql": "^2.17.1",
+		"mysql2": "^2.3.3",
 		"node-cron": "^3.0.0",
 		"nodemailer": "^6.7.2",
+		"pdf-creator-node": "^2.3.4",
 		"pdf-to-base64": "^1.0.2",
+		"puppeteer": "^14.1.1",
 		"read-excel-file": "^4.0.4",
-		"uuid": "^3.3.2"
+		"uuid": "^3.3.2",
+		"winston": "^3.7.2",
+		"winston-daily-rotate-file": "^4.6.1",
+		"zip-a-folder": "^1.1.3"
 	},
 	"devDependencies": {
 		"concurrently": "^6.2.1",
